# wl-bg-gallery-rs

./: .config  Cargo.toml  README.md  README.org  build.sh  config.toml  wl-bg-gallery.service
src/: background_image.rs  config.rs  image_file.rs  image_order_prio.rs  main.rs  memory.rs  output.rs  test.rs  wl_app.rs
