[package]
name = "wl-bg-gallery-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.25.5", default-features = false, features = ["jpeg", "png", "webp"] }
libc = "0.2.169"
nix = { version = "0.29.0", features = ["event", "fs", "mman"] }
rand = "0.9.0"
wayland-client = "0.31.8"
wayland-protocols = { version = "0.32.6", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.3.6", features = ["client"] }
